<resources>
    <string name="app_name">Student Hub</string>
    <string name="see_all_job_post">See All Notice</string>
    <string name="prompt_search">Search Text</string>

    <!--school categories for student chat helps -->
    <string name="Business">Business</string>
    <string name="Engineer">Engineer</string>
    <string name="Foundation">Foundation</string>
    <string name="Science">Science</string>

    <!--club categories-->
    <string name="community">Community Service Club</string>
    <string name="dance">Dance Club</string>
    <string name="music">Music Club</string>
    <string name="photography">Photography Club</string>
    <string name="sports">Sports Club</string>


    <!--club description-->
    <string name="communityDes">Giving back to the community is at the heart of our Future Makers, our torchbearers do so at events such as Food Donation Drive and Festive Celebrations.</string>
    <string name="danceDes">If you’re into dancing and have unique moves to showcase, or just want to learn new tricks, you are more than welcome to join the club.</string>
    <string name="musicDes">If you have a deep passion for music, this is the creative outlet for you. Imagine a group of talented individuals getting together for a jamming session.</string>
    <string name="photographyDes">Our shutterbugs capture every Instagram-worthy moment. If you would like to dabble in the art of photography bring your camera and get into action</string>
    <string name="sportsDes">Various activities like badminton, basketball, rock-climbing, running, and cycling are organised to engage students off-campus.</string>

    <!--titles-->
    <string name="categories">Categories</string>
    <string name="login">Login</string>
    <string name="signup">SignUp</string>
    <string name="viewnotice">View Notice</string>
    <string name="searchText">Search here...</string>
    <string name="startupHeading">Best Educational Institute</string>
    <string name="startupSmallHeading">50-year heritage of producing industry-ready graduates, We are the Academy of the Future</string>

    <string name="navigation_drawer_open">Open Drawer</string>
    <string name="navigation_drawer_close">Close Drawer</string>
    <string name="logout">Signed Out Successful</string>
</resources>