<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login.StartUp"
    android:background="@color/white"
    android:padding="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/psbacademy"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/muli_black_italic"
            android:text="@string/startupHeading"
            android:textAlignment="center"
            android:layout_marginTop="100dp"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/muli_black_italic"
            android:text="@string/startupSmallHeading"
            android:textAlignment="center" />

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/login_button_startup"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:onClick="mainScreen"
                android:text="@string/login"
                android:textColor="@color/black"
                android:transitionName="transition_login"/>

            <Button
                android:id="@+id/signup_button_startup"
                android:onClick="signUp"
                android:background="@color/colorPrimary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:textColor="@color/black"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"/>

        </LinearLayout>
        <Button

            android:background="#00000000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/viewnotice"
            android:onClick="viewNotice"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"/>


    </LinearLayout>

</ScrollView>